[build-system]
requires = ["setuptools>=68", "wheel", "numpy"]  # numpy 常用于编译期检查
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.1.0"
description = "Utilities adapted from LIGO tutorial for Stat 259."
authors = [
  { name="Ligo Scientific Collaboration (LSC)" },
  { name="YUYANG WU" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "h5py",
  "pandas",
  "ipykernel",
  "decorator",
  "ipython"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ligotools*"]